// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ProgressBar
    colorClass="default-color"
    heightSize="small"
    max={100}
    value={15}
  >
    <div>
      <VisuallyHiddenText
        aria-live="polite"
        text="15%"
      >
        <span
          aria-live="polite"
          className="visually-hidden-text"
        >
          15%
        </span>
      </VisuallyHiddenText>
      <progress
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={15}
        aria-valuetext="15%"
        className="progress-bar small default-color orion-fusion-theme"
        max={100}
        tabIndex="-1"
        value={15}
      />
    </div>
  </ProgressBar>
</ThemeContextProvider>
`;

exports[`should render a ProgressBar component with default heightSize 50% fill and custom props and style 1`] = `
<div>
  <VisuallyHiddenText
    aria-live="polite"
    text="6%"
  />
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    aria-valuetext="6%"
    className="progress-bar small default-color"
    dir="rtl"
    max={100}
    tabIndex="-1"
    value={50}
  />
</div>
`;

exports[`should render a ProgressBar component with default heightSize 50% fill and valueText 1`] = `
<div>
  <VisuallyHiddenText
    aria-live="polite"
    text="Progress is 6%"
  />
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    aria-valuetext="Progress is 6%"
    className="progress-bar small default-color"
    max={100}
    tabIndex="-1"
    value={50}
  />
</div>
`;

exports[`should render a ProgressBar component with default heightSize and 50% fill and colorClass prop 1`] = `
<div>
  <VisuallyHiddenText
    aria-live="polite"
    text="60%"
  />
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    aria-valuetext="60%"
    className="progress-bar small yellow-bar"
    max={100}
    tabIndex="-1"
    value={50}
  />
</div>
`;

exports[`should render a ProgressBar component with large heightSize and 60% fill 1`] = `
<div>
  <VisuallyHiddenText
    aria-live="polite"
    text="15%"
  />
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={60}
    aria-valuetext="15%"
    className="progress-bar large default-color"
    max={100}
    tabIndex="-1"
    value={60}
  />
</div>
`;

exports[`should render a ProgressBar component with tiny heightSize and 15% fill 1`] = `
<div>
  <VisuallyHiddenText
    aria-live="polite"
    text="15%"
  />
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={15}
    aria-valuetext="15%"
    className="progress-bar tiny default-color"
    max={100}
    tabIndex="-1"
    value={15}
  />
</div>
`;

exports[`should render a default component 1`] = `
<div>
  <VisuallyHiddenText
    aria-live="polite"
    text="15%"
  />
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={15}
    aria-valuetext="15%"
    className="progress-bar small default-color"
    max={100}
    tabIndex="-1"
    value={15}
  />
</div>
`;
